Avoid a possible compiler bug by using a static buffer instead of a stack local buffer.

PR binutils/21582
	* ieee.c (ieee_object_p): Use a static buffer to avoid compiler
	bugs.